--- a/vercel.json
+++ b/vercel.json
@@ -13,3 +13,15 @@
     }
   ]
 }
+
+{
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ],
+  "routes": [
+    {
+      "src": "/style.css",
+      "dest": "/public/style.css"
+    }
+  ]
+}
